<!--
 Copyright 2015 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_page_margin"
    android:paddingLeft="@dimen/horizontal_page_margin"
    android:paddingRight="@dimen/horizontal_page_margin"
    android:paddingTop="@dimen/vertical_page_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_page_margin"
        android:text="@string/intro" />

    <Button
        android:id="@+id/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_call" />

    <EditText
        android:id="@+id/FtNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter phone number to forward to"
        android:inputType="phone"
        android:text="@string/defaultFtNo" />

    <RadioGroup
        android:id="@+id/rb_gr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_all">

        <RadioButton
            android:id="@+id/rb_busy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CF_BUSY" />

        <RadioButton
            android:id="@+id/rb_na"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CF_NA" />

        <RadioButton
            android:id="@+id/rb_nr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CF_NR" />

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CF_ALL" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch SIM"
        android:textOff="SIM 1"
        android:textOn="SIM 2" />

    <RadioGroup
        android:id="@+id/rb_gr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rb_Set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set forward" />

        <RadioButton
            android:id="@+id/rb_Check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Read Forward" />

        <RadioButton
            android:id="@+id/rb_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel Forward" />
    </RadioGroup>
</LinearLayout>
